--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "framer-motion": "^12.18.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "resend": "^4.6.0",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
     "stripe": "^18.2.1"
   },
   "devDependencies": {
