--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.10.1",
     "@stripe/stripe-js": "^7.3.1",
     "bcrypt": "^6.0.0",
+    "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.18.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
